# Independent_Study-Backend_development

./: .gitignore  package-lock.json  package.json
ASPNETTestApp/TodoApi/: TodoApi.sln
Angular-Tutorial-App/: angular.json  package-lock.json  tsconfig.app.json  tsconfig.json
BackendTestApp/: .gitignore
BackendTestApp/flaskr/: .env  __init__.py  auth.py  (+2 more)
First-App/: angular.json  package-lock.json  package.json
LibraryTracerBullet/: README.md  angular.json  package-lock.json  package.json
Mx-Management-Site/: README.md  angular.json  package.json
RustTestProject/: Cargo.toml  identifier.sqlite
WebApplication1/: WebApplication1.sln
kanban-fir/: .firebaserc  .gitignore  README.md  angular.json  firebase.json  package-lock.json  package.json
morningexapi/: Cargo.toml  Shuttle.toml
mx-management-site/: .firebaserc  angular.json  firebase.json  package.json
my-app/: package-lock.json  package.json
rustapi/: .dockerignore  Cargo.toml  Dockerfile  compose.yaml  docker-compose.yml  httprequests.http
rustapi/Database/: schema.sql
rustapi/database/: Db  schema.sql
rustapi/src/: MXroutes.rs  UserRoutes.rs  config.rs  defaultroutes.rs  errors.rs  handlers.rs  jwt.rs  loginroutes.rs  main.rs  middlewares.rs  mx_date_algorithm.rs  mxdate_algorithim.rs  router.rs  state.rs  types.rs
rustapi/src/defaultroutes/: calendarservice.rs  calenderservice.rs  mx_service.rs  user_manager.rs
rustapi/src/handlers/: login_service.rs  mx_service.rs  user_manager.rs
rustapi/src/routes/: user_routes.rs
rustapi/src/services/: mx_service.rs
rustapi/src/types/: mod.rs
(+122 files in other folders)
