[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "=0.7.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "tls-native-tls" ] }
axum-macros = "0.4.1"
dotenv = "0.15.0"
anyhow = "1.0.81"
time = "0.3.34"
oauth2 = "4.4.2"
async-session = "3.0.0"
headers = "0.4.0"
hostname = "0.3.1"
constant_time_eq = "0.1.5"
reqwest = { version = "0.12.2", features = ["json"] }
uuid = { version = "1.8.0", features = ["v4"] }